fix xbar item height value and add overflowing text scroller

--- a/src/components/XB/style.css
+++ b/src/components/XB/style.css
@@ -171,6 +171,7 @@
 
 .xb-item .xb-item-info .xb-item-name {
 	font-weight: 400;
+	width: 660px;
 	white-space: nowrap;
 	transition-duration: var(--transition-standard);
 }
